# near-sdk-contract-tools

./: .dockerignore  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-and-test.yml  check-formatting.yml  rust.yml
examples/: king.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: slot.rs
hooks/: pre-commit
macros/: Cargo.toml
macros/src/: escrow.rs  event.rs  fungible_token.rs  integration.rs  lib.rs  migrate.rs  nep141.rs  nep148.rs  ownable.rs  owner.rs  pausable.rs  pause.rs  rbac.rs  rename.rs  upgrade.rs
macros/src/approval/: mod.rs  simple_multisig.rs
macros/src/standard/: event.rs  fungible_token.rs  mod.rs  nep141.rs  nep145.rs  nep148.rs  nep171.rs  nep177.rs  nep178.rs  nep181.rs  nep297.rs  non_fungible_token.rs
scripts/: upgrade.js
src/: approval.rs  confirmations.rs  escrow.rs  event.rs  fast_account_id.rs  hook.rs  lib.rs  migrate.rs  owner.rs  ownership.rs  pausable.rs  pause.rs  rbac.rs  slot.rs  upgrade.rs  utils.rs
src/approval/: expire_multisig.rs  mod.rs  native_action.rs  native_transaction_action.rs  simple_multisig.rs
src/standard/: mod.rs  nep141.rs  nep145.rs  nep148.rs  nep171.rs  nep177.rs  nep178.rs  nep181.rs  nep297.rs
src/standard/nep141/: error.rs  event.rs  ext.rs  hook.rs  hooks.rs  mod.rs
src/standard/nep145/: error.rs  ext.rs  hooks.rs  mod.rs
src/standard/nep171/: action.rs  error.rs  event.rs  ext.rs  hooks.rs  mod.rs
src/standard/nep178/: action.rs  error.rs  ext.rs  mod.rs
src/upgrade/: mod.rs  raw.rs  serialized.rs
test-vm/: Cargo.toml  Dockerfile  build-docker.sh
tests/: macros.rs  mod.rs
tests/macros/: escrow.rs  event.rs  migrate.rs  mod.rs  ownable.rs  owner.rs  pausable.rs  pause.rs
tests/macros/standard/: fungible_token.rs  mod.rs  nep141.rs  nep145.rs  nep148.rs  nep171.rs  non_fungible_token.rs
tests/macros/standard/nep171/: hooks.rs  manual_integration.rs  mod.rs  no_hooks.rs  non_fungible_token.rs
workspaces-tests/: Cargo.toml  Makefile.toml  README.md
workspaces-tests-utils/: Cargo.toml
workspaces-tests-utils/src/: lib.rs
workspaces-tests/src/: lib.rs
workspaces-tests/tests/: counter_multisig.rs  escrow.rs  fungible-token.rs  fungible_token.rs  native_multisig.rs  non_fungible_token.rs  payroll.rs  rbac.rs  simple_multisig.rs  storage_fee.rs  storage_management.rs  tests.rs  upgrade.rs  upgrade_manual.rs  upgrade_multisig.rs
