[package]
authors.workspace = true
categories = ["wasm", "cryptography::cryptocurrencies"]
description = """
Helpful functions and macros for developing smart contracts on NEAR Protocol.
"""
documentation = "https://docs.rs/near-sdk-contract-tools"
edition.workspace = true
exclude = ["documents/"]
license.workspace = true
name = "near-sdk-contract-tools"
repository.workspace = true
version.workspace = true

[workspace]
members = [".", "macros", "workspaces-tests", "workspaces-tests-utils"]

[workspace.package]
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/near/near-sdk-contract-tools"
version = "1.1.0"

[workspace.dependencies]
# normal dependencies
near-sdk = { version = "4.1.1", default-features = false }
near-sdk-contract-tools-macros = { version = "=1.1.0", path = "./macros" }
thiserror = "1.0.35"

base64 = "0.13.0"
darling = "0.14.1"
heck = "0.4.0"
once_cell = "1.16.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
syn = "1.0.99"

# dev-dependencies
near-crypto = "0.15.0"
near-workspaces = "0.8"
pretty_assertions = "1.4.0"
tokio = "1.21.1"

[dependencies]
near-sdk.workspace = true
near-sdk-contract-tools-macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, default-features = false, features = [
  "unit-testing",
  "legacy",
] }

[features]
unstable = ["near-sdk/unstable"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
