[package]
authors.workspace = true
categories = ["wasm", "cryptography::cryptocurrencies"]
description = """
Helpful functions and macros for developing smart contracts on NEAR Protocol.
"""
documentation = "https://docs.rs/near-sdk-contract-tools"
edition.workspace = true
exclude = ["documents/"]
license.workspace = true
name = "near-sdk-contract-tools"
repository.workspace = true
version.workspace = true

[workspace]
members = [".", "macros", "workspaces-tests", "workspaces-tests-utils"]

[workspace.package]
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/near/near-sdk-contract-tools"
version = "1.1.0"

[workspace.dependencies]
# normal dependencies
near-sdk = { version = "4.1.1", default-features = false }
near-sdk-contract-tools-macros = { version = "=1.1.0", path = "./macros" }
thiserror = "1.0"

base64 = "0.13.0"
darling = "0.20"
heck = "0.4"
once_cell = "1.16"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.6"
strum = "0.25"
strum_macros = "0.25"
syn = "2.0"

# dev-dependencies
near-crypto = "0.15"
near-workspaces = "0.8"
pretty_assertions = "1.4"
tokio = "1.21"

[dependencies]
near-sdk.workspace = true
near-sdk-contract-tools-macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, default-features = false, features = [
  "unit-testing",
  "legacy",
] }

[features]
unstable = ["near-sdk/unstable"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
