[package]
authors.workspace = true
categories = ["wasm", "cryptography::cryptocurrencies"]
description = """
Helpful functions and macros for developing smart contracts on NEAR Protocol.
"""
documentation = "https://docs.rs/near-sdk-contract-tools"
edition.workspace = true
exclude = ["documents/"]
license.workspace = true
name = "near-sdk-contract-tools"
repository.workspace = true
version.workspace = true

[workspace]
members = [".", "macros", "workspaces-tests", "workspaces-tests-utils"]

[workspace.package]
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/near/near-sdk-contract-tools"
version = "2.1.0"

[workspace.dependencies]
# normal dependencies
near-sdk-4 = { package = "near-sdk", version = "4.1.1", default-features = false }
near-sdk-5 = { package = "near-sdk", version = "5.0.0", default-features = false }
near-sdk-contract-tools-macros = { version = "=2.1.0", path = "./macros" }
thiserror = "1"
once_cell = "1"

# macro dependencies
darling = "0.20"
heck = "0.5"
proc-macro2 = "1"
quote = "1.0"
strum = "0.26"
strum_macros = "0.26"
syn = "2.0"

# test/dev-dependencies
near-crypto = "0.21"
near-workspaces = "0.10"
pretty_assertions = "1"
tokio = "1"

[dependencies]
near-sdk-4 = { workspace = true, default-features = false, features = [
  "legacy",
], optional = true }
near-sdk-5 = { workspace = true, default-features = false, features = [
  "legacy",
], optional = true }
near-sdk-contract-tools-macros.workspace = true
once_cell.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-sdk-4 = { workspace = true, default-features = false, features = [
  "unit-testing",
  "legacy",
] }
near-sdk-5 = { workspace = true, default-features = false, features = [
  "unit-testing",
  "legacy",
] }

[features]
default = ["near-sdk-5"]
near-sdk-4 = ["dep:near-sdk-4"]
near-sdk-5 = ["dep:near-sdk-5"]
unstable = ["near-sdk-4?/unstable", "near-sdk-5?/unstable"]

[package.metadata.docs.rs]
features = ["unstable"]
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
