[package]
authors = ["Jacob Lindahl <jacob@near.foundation>"]
categories = ["wasm"]
description = """
Macros for `near-sdk-contract-tools`
"""
edition = "2021"
license = "GPL-3.0"
name = "near-sdk-contract-tools-macros"
version = "1.0.1"

[dependencies]
base64 = "0.13.0"
darling = "0.14.1"
heck = "0.4.0"
once_cell = "1.16.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
syn = "1.0.99"

[lib]
proc-macro = true
