[package]
authors.workspace = true
categories = ["wasm"]
description = """
Macros for `near-sdk-contract-tools`
"""
documentation = "https://docs.rs/near-sdk-contract-tools-macros"
edition.workspace = true
license.workspace = true
name = "near-sdk-contract-tools-macros"
repository.workspace = true
version.workspace = true

[dependencies]
darling.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
strum.workspace = true
strum_macros.workspace = true
syn.workspace = true

[lib]
proc-macro = true
