[package]
autobins = false
edition = "2021"
name = "workspaces-tests"
publish = false
version = "0.1.0"

[[bin]]
name = "basic_adder"

[[bin]]
name = "counter_multisig"

[[bin]]
name = "cross_target"

[[bin]]
name = "fungible_token"

[[bin]]
name = "native_multisig"

[[bin]]
name = "rbac"

[[bin]]
name = "simple_multisig"

[[bin]]
name = "upgrade_bad"

[[bin]]
name = "upgrade_new"

[[bin]]
name = "upgrade_old_borsh"

[[bin]]
name = "upgrade_old_jsonbase64"

[[bin]]
name = "upgrade_old_multisig"

[[bin]]
name = "upgrade_old_raw"

[dependencies]
near-sdk = {version = "4.1.1", default-features = false}
near-sdk-contract-tools = {path = "../", features = ["unstable"]}
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.34"

[dev-dependencies]
near-crypto = "0.15.0"
tokio = "1.21.1"

[target.'cfg(not(windows))'.dev-dependencies]
workspaces = "0.7"
