[package]
autobins = false
edition.workspace = true
name = "workspaces-tests"
publish = false
version = "0.1.0"

[[bin]]
name = "basic_adder"

[[bin]]
name = "counter_multisig"

[[bin]]
name = "cross_target"

[[bin]]
name = "escrow"

[[bin]]
name = "fungible_token_nep145"

[[bin]]
name = "fungible_token"

[[bin]]
name = "native_multisig"

[[bin]]
name = "non_fungible_token_full"

[[bin]]
name = "non_fungible_token_nep171"

[[bin]]
name = "non_fungible_token_receiver"

[[bin]]
name = "rbac"

[[bin]]
name = "simple_multisig"

[[bin]]
name = "storage_fee"

[[bin]]
name = "upgrade_bad"

[[bin]]
name = "upgrade_new"

[[bin]]
name = "upgrade_old_borsh"

[[bin]]
name = "upgrade_old_jsonbase64"

[[bin]]
name = "upgrade_old_multisig"

[[bin]]
name = "upgrade_old_raw"

[dependencies]
near-sdk.workspace = true
near-sdk-contract-tools = { path = "../", features = ["unstable"] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-crypto.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true

[target.'cfg(not(windows))'.dev-dependencies]
near-workspaces.workspace = true
workspaces-tests-utils = { path = "../workspaces-tests-utils" }
