[package]
autobins = false
edition.workspace = true
name = "workspaces-tests"
publish = false
version = "0.1.0"

[[bin]]
name = "basic_adder"

[[bin]]
name = "counter_multisig"

[[bin]]
name = "cross_target"

[[bin]]
name = "escrow"

[[bin]]
name = "fungible_token"

[[bin]]
name = "fungible_token_receiver"

[[bin]]
name = "native_multisig"

[[bin]]
name = "non_fungible_token_full"

[[bin]]
name = "non_fungible_token_nep171"

[[bin]]
name = "non_fungible_token_receiver"

[[bin]]
name = "rbac"

[[bin]]
name = "simple_multisig"

[[bin]]
name = "storage_fee"

[[bin]]
name = "upgrade_bad"

[[bin]]
name = "upgrade_new"

[[bin]]
name = "upgrade_old_borsh"

[[bin]]
name = "upgrade_old_jsonbase64"

[[bin]]
name = "upgrade_old_multisig"

[[bin]]
name = "upgrade_old_raw"

[dependencies]
near-sdk-4 = { workspace = true, default-features = false, optional = true }
near-sdk-5 = { workspace = true, default-features = false, optional = true }
near-sdk-contract-tools = { path = "../", default-features = false, features = [
    "unstable",
] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-crypto.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true
near-workspaces.workspace = true
workspaces-tests-utils = { path = "../workspaces-tests-utils", default-features = false, features = [
    "unstable",
] }

[features]
default = ["near-sdk-5"]
near-sdk-4 = [
    "dep:near-sdk-4",
    "near-sdk-contract-tools/near-sdk-4",
    "workspaces-tests-utils/near-sdk-4",
]
near-sdk-5 = [
    "dep:near-sdk-5",
    "near-sdk-contract-tools/near-sdk-5",
    "workspaces-tests-utils/near-sdk-5",
]
unstable = ["near-sdk-4?/unstable", "near-sdk-5?/unstable"]
